[21:2.1.1]
- Added option which allows applying a texture filter using the gles2rice video plugin
- Added option to change action bar transparency
- Fixed crash with haptic feedback on d-pad diagonal
- Fixed gles2N64 graphical issues (Star Wars Ep. 1 Racer and others)
[20:2.1.0]
- Fixed stretch-screen bug in gles2rice video plugin (fixes Mario Kart multiplayer, Zelda blue action icon, and many others)
- Added screen position option for portrait mode
- Added vibration feedback for touchscreen/pad buttons
- Added auto-hold feature for touchscreen buttons
- Added UI to save/load custom input profiles
- Improved joystick compatibility (Nyko PlayPad, OUYA)
- Fixed various bugs in input mapping screen
- Added stock input profiles for Xperia PLAY and OUYA
- Added OUYA mode (gamepad-only menu navigation)
- Removed disconnected controllers from multi-player dialog
- Fixed bugs in summary text for list preferences
- Added in-app change log
- Added icons to file/folder dialogs for Honeycomb+
- Updated translations
- Fixed various crashes
[19:2.0.3]
- Improved joystick compatibility
- Added button mapping profiles
- Fixed language menu changing system language
- Fixed language menu showing un-translated languages
- Fixed touchscreen analog redraw bug
- Fixed various crashes
[18:2.0.2]
- Fixed crash caused by failed data extraction
[17:2.0.1]
- Fixed unnavigability in file chooser on first run
- Fixed disappearing list in file chooser on orientation change
- Updated license to GPLv3
[16:2.0.0]
- Rebuilt user interface and menu system
- Added native joystick support, with analog control
- Better synchronized core with upstream
- Added support for x86 CPUs
- Fixed Majora's Mask freeze
- Added flicker reduction settings
- Added framelimiter settings
- Added orientation selections
- Added resampling algorithm selections
- Added swap audio channels setting
- Improved optimizations
- Increased game and device compatibility
- Integrated OUYA support
[14:1.9.2]